use Newman tests branch with name corresponding to PR source branch if exists

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
     with:
       postman-collections-list: './e2e/1_1_Smoke_Portal.postman_collection.json,./e2e/2_1_Negative_Portal.postman_collection.json,./e2e/3_1_Stories_Bugs.postman_collection.json,./e2e/4_Access_control.postman_collection.json'
       apihub-backend-image-tag: ${{ needs.build-docker-image.outputs.image_tag }}
+      postman-repository-branch: ${{ github.head_ref }} # will default to develop if corresponding branch for playwright tests is not found
       # apihub-ui-image-tag: dev
       # apihub-build-task-consumer-image-tag: dev
     secrets:
