build: use effective tags for peer images (#96)
* build: use effective tags for peer images

* Update ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,17 +21,33 @@ jobs:
         platforms: linux/amd64,linux/arm64
         labels: |
             maintainer=qubership
-
+  calculate-ui-tag:
+    if: github.event_name == 'pull_request'
+    needs: build-docker-image
+    uses: netcracker/qubership-apihub-ci/.github/workflows/calculate-effective-tag.yaml@main
+    with:
+      branch-name: ${{ github.head_ref }} # pass PR source branch
+      repo-name: qubership-apihub-ui
+  calculate-build-task-consumer-tag:
+    if: github.event_name == 'pull_request'
+    needs: build-docker-image
+    uses: netcracker/qubership-apihub-ci/.github/workflows/calculate-effective-tag.yaml@main
+    with:
+      branch-name: ${{ github.head_ref }} # pass PR source branch
+      repo-name: qubership-apihub-build-task-consumer
   run-e2e-tests:
     uses: netcracker/qubership-apihub-ci/.github/workflows/run-e2e-tests.yml@main
-    needs: build-docker-image
+    needs: [build-docker-image, calculate-ui-tag, calculate-build-task-consumer-tag]
     if: github.event_name == 'pull_request'
     with:
       postman-collections-list: './e2e/1_1_Smoke_Portal.postman_collection.json,./e2e/2_1_Negative_Portal.postman_collection.json,./e2e/3_1_Stories_Bugs.postman_collection.json,./e2e/4_Access_control.postman_collection.json'
       apihub-backend-image-tag: ${{ needs.build-docker-image.outputs.image_tag }}
-      postman-repository-branch: ${{ github.head_ref }} # will default to develop if corresponding branch for playwright tests is not found
-      # apihub-ui-image-tag: dev
-      # apihub-build-task-consumer-image-tag: dev
+      apihub-ui-image-tag: ${{ needs.calculate-ui-tag.outputs.tag }}
+      apihub-build-task-consumer-image-tag: ${{ needs.calculate-build-task-consumer-tag.outputs.tag }}
+      # pass PR source branch, will default to develop if corresponding branch for Newman tests is not found
+      postman-repository-branch: ${{ github.head_ref }}
+      # pass PR source branch, will default to develop if corresponding branch for Playwright tests is not found
+      playwright-repository-branch: ${{ github.head_ref }}
     secrets:
       APIHUB_ACCESS_TOKEN: ${{ secrets.APIHUB_ACCESS_TOKEN }}
       APIHUB_ADMIN_EMAIL: ${{ secrets.APIHUB_ADMIN_EMAIL }}
